add form subscribe without icon

--- a/index.html
+++ b/index.html
@@ -456,9 +456,17 @@
               </li>
             </ul>
           </div>
+          <div class="subscribe">
+            <label>
+              <span class="subscribe-title">Подпишитесь на рассылку</span>
+              <input type="email" class="subscribe-input" name="email" placeholder="E-mail" />
+            </label>
+            <button type="submit" class="subscribe-btn">Подписаться</button>
+          </div>
         </div>
       </div>
     </footer>
+    <!-- Modal window -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-btn" data-modal-close>
