--- a/index.html
+++ b/index.html
@@ -456,13 +456,20 @@
               </li>
             </ul>
           </div>
-          <div class="subscribe">
-            <label>
+          <form action="POST" class="subscribe-form">
+            <!-- <div class="subscribe"> -->
+            <label class="subscribe-label">
               <span class="subscribe-title">Подпишитесь на рассылку</span>
               <input type="email" class="subscribe-input" name="email" placeholder="E-mail" />
             </label>
-            <button type="submit" class="subscribe-btn">Подписаться</button>
-          </div>
+            <!-- </div> -->
+            <button type="submit" class="subscribe-btn">
+              <span class="subscribe-btn-text">Подписаться</span>
+              <svg width="24" height="24" class="subscribe-icon">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
