--- a/index.html
+++ b/index.html
@@ -481,6 +481,39 @@
             <use href="./images/sprite.svg#icon-close-cross"></use>
           </svg>
         </button>
+        <h1 class="modal-title">Оставьте свои данные, мы вам перезвоним</h1>
+        <form action="POST">
+          <label class="contact-label">
+            <span class="client-label">Имя</span>
+            <input type="text" name="client-name" class="contact-input" />
+            <svg width="18" height="18" class="client-name-icon">
+              <use href="./images/icons.svg#icon-person-name"></use>
+            </svg>
+          </label>
+          <label class="contact-label">
+            <span class="client-label">Телефон</span>
+            <input type="tel" name="client-tel" class="contact-input" />
+            <svg width="18" height="18" class="client-name-icon">
+              <use href="./images/icons.svg#icon-phone-form"></use>
+            </svg>
+          </label>
+          <label class="contact-label">
+            <span class="client-label">Почта</span>
+            <input type="email" name="client-email" class="contact-input" />
+            <svg width="18" height="18" class="client-name-icon">
+              <use href="./images/icons.svg#icon-email-form"></use>
+            </svg>
+          </label>
+          <label class="contact-label">
+            <span class="client-label">Комментарий</span>
+            <textarea
+              name="client-comment"
+              class="client-comment"
+              rows="6"
+              placeholder="Введите текст"
+            ></textarea>
+          </label>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
