--- a/index.html
+++ b/index.html
@@ -513,6 +513,14 @@
               placeholder="Введите текст"
             ></textarea>
           </label>
+          <label class="checkbox-label">
+            <input type="checkbox" name="checkbox" class="checkbox-input visually-hidden" />
+            <span class="checkbox-icon"></span>
+            <span class="checkbox-text"
+              >Соглашаюсь с рассылкой и принимаю
+              <a href="" class="checkbox-link">Условия договора</a></span
+            >
+          </label>
         </form>
       </div>
     </div>
