--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
           </svg>
         </button>
         <h1 class="modal-title">Оставьте свои данные, мы вам перезвоним</h1>
-        <form action="POST">
+        <form action="POST" class="modal-form">
           <label class="contact-label">
             <span class="client-label">Имя</span>
             <input type="text" name="client-name" class="contact-input" />
@@ -515,12 +515,16 @@
           </label>
           <label class="checkbox-label">
             <input type="checkbox" name="checkbox" class="checkbox-input visually-hidden" />
-            <span class="checkbox-icon"></span>
+            <!-- <span class="checkbox-icon"></span> -->
+            <svg width="16" height="15" class="checkbox-icon">
+              <use href="./images/icons.svg#icon-check"></use>
+            </svg>
             <span class="checkbox-text"
               >Соглашаюсь с рассылкой и принимаю
               <a href="" class="checkbox-link">Условия договора</a></span
             >
           </label>
+          <button type="submit" class="answer-submit">Отправить</button>
         </form>
       </div>
     </div>
