add var for timing-function
Add footer to portfolio, fixed paragraph in modal window

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
             <use href="./images/sprite.svg#icon-close-cross"></use>
           </svg>
         </button>
-        <h1 class="modal-title">Оставьте свои данные, мы вам перезвоним</h1>
+        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
         <form action="POST" class="modal-form">
           <label class="contact-label">
             <span class="client-label">Имя</span>
@@ -515,7 +515,6 @@
           </label>
           <label class="checkbox-label">
             <input type="checkbox" name="checkbox" class="checkbox-input visually-hidden" />
-            <!-- <span class="checkbox-icon"></span> -->
             <svg width="16" height="15" class="checkbox-icon">
               <use href="./images/icons.svg#icon-check"></use>
             </svg>
