--- a/portfolio.html
+++ b/portfolio.html
@@ -351,6 +351,20 @@
               </li>
             </ul>
           </div>
+          <form action="POST" class="subscribe-form">
+            <!-- <div class="subscribe"> -->
+            <label class="subscribe-label">
+              <span class="subscribe-title">Подпишитесь на рассылку</span>
+              <input type="email" class="subscribe-input" name="email" placeholder="E-mail" />
+            </label>
+            <!-- </div> -->
+            <button type="submit" class="subscribe-btn">
+              <span class="subscribe-btn-text">Подписаться</span>
+              <svg width="24" height="24" class="subscribe-icon">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
     </footer>
