--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
             <use href="./images/sprite.svg#icon-close-cross"></use>
           </svg>
         </button>
-        <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+        <strong class="modal-title">Оставьте свои данные, мы вам перезвоним</strong>
         <form action="POST" class="modal-form">
           <label class="contact-label">
             <span class="client-label">Имя</span>
