fix bugs after mentor's comment

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
               </li>
             </ul>
           </div>
-          <form action="POST" class="subscribe-form">
+          <form class="subscribe-form">
             <!-- <div class="subscribe"> -->
             <label class="subscribe-label">
               <span class="subscribe-title">Подпишитесь на рассылку</span>
@@ -482,7 +482,7 @@
           </svg>
         </button>
         <strong class="modal-title">Оставьте свои данные, мы вам перезвоним</strong>
-        <form action="POST" class="modal-form">
+        <form class="modal-form">
           <label class="contact-label">
             <span class="client-label">Имя</span>
             <input type="text" name="client-name" class="contact-input" />
@@ -504,7 +504,7 @@
               <use href="./images/icons.svg#icon-email-form"></use>
             </svg>
           </label>
-          <label class="contact-label">
+          <label class="contact-label contact-last">
             <span class="client-label">Комментарий</span>
             <textarea
               name="client-comment"
