--- a/portfolio.html
+++ b/portfolio.html
@@ -351,7 +351,7 @@
               </li>
             </ul>
           </div>
-          <form action="POST" class="subscribe-form">
+          <form class="subscribe-form">
             <!-- <div class="subscribe"> -->
             <label class="subscribe-label">
               <span class="subscribe-title">Подпишитесь на рассылку</span>
